Always use static imports for org.junit.Assert
`org.junit.Assert` provides static JUnit 4 assertion methods.  Many of
these methods have JUnit 5 analogues in
`org.junit.jupiter.api.Assertions`, but we're not switching over to
the latter yet.  Instead, we're just changing to using static imports to
get the same `org.junit.Assert` methods we were already using.

By switching to static imports now, we make it easier to change from
JUnit 4 to JUnit 5 later.  In most cases, we'll just have to change the
top-of-file static imports, not the code that actually calls the
imported methods.  That should make diffs in subsequent pull requests
smaller and easier to review.